Cpp_experiment/Pu240_source/logs/.ipynb_checkpoints/24007644-checkpoint.err
/var/spool/slurmd/job24007644/slurm_script: line 20: fuel_density: command not found
/var/spool/slurmd/job24007644/slurm_script: line 21: coolant_density: command not found
/var/spool/slurmd/job24007644/slurm_script: line 22: radius: command not found
jq: error (at config.json:5): Expected JSON value (while parsing '')
  File "/global/scratch/users/toniooppi/Nuclear_stuff/Cpp_experiment/Pu240_source/pu240source.py", line 11
    print(type(config['fuel_density'])
         ^
SyntaxError: '(' was never closed
/openmc_venv/lib/python3.11/site-packages/openmc/config.py:62: UserWarning: '/global/home/users/toniooppi/nuclear_data/chain-endf-b8.0.xml' does not exist.
  warnings.warn(f"'{value}' does not exist.")
